# bloom_cpp

./: Bloom_CPP  CMakeLists.txt  README.md
src/: MyImage.cpp  MyImage.h  main.cpp  main2.cpp
src_claude/: MyImage.cpp  MyImage.h  main.cpp
src_claude_openmp/: MyImage.cpp  main.cpp
src_shit/: MyImage.cpp  main.cpp
